# soulspot

./: .env.example  .gitignore  CHANGELOG.md  CLEANUP.md  COVERAGE_ANALYSIS_SUMMARY.md  DEEZER_INTEGRATION_FIX_SUMMARY.md  DOCKER_CSS_BUILD_CHANGES.md  DOCKER_CSS_CHECKLIST.md  DOCKER_FIX_CHECKLIST.md  DOCKER_NPM_FIX.md  Dockerfile  ERROR_FIX_COMPLETION_REPORT.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Justfile  MIGRATION_FIX_SUMMARY.md  MIGRATION_FIX_TEST_PLAN.md  Makefile  NPM_SETUP.md  QA_ACTION_PLAN.md  QA_COMMANDS.md  QA_COMPREHENSIVE_REPORT.md  QA_README.md  QA_REPORT.md  QA_REPORTS_README.md  QA_REPORT_2025-12-13.md  QA_RUN_SUMMARY.md  QA_SESSION_SUMMARY.md  QA_TOOLS_REFERENCE.md  README.md  REVIEW_SUMMARY_20251111.md  SLSKD_FIX_SUMMARY.md  SPOTIFY_FIX_SOFORT.md  TEST_REPORT.md  docker-compose.dev.yml  docker-compose.yml  fehler-sammlung.md  frontend-development-roadmap.md  package.json  pyproject.toml  (+4 more)
.github/: copilot-instructions.md
.github/templates/sqlite-hybrid-strategy/: README.md  pyproject.toml  sqlite-hybrid-db-agent.md
.github/templates/sqlite-hybrid-strategy/src/sqlite_hybrid/: __init__.py  log_database.py  retry.py  write_buffer.py
alembic/: env.py
docker/: CSS_BUILD_PROCESS.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  docker-entrypoint.sh
docs/: ACTION_PLAN.md  CODE_VALIDATION_REFERENCE.md  CSRF_IMPLEMENTATION_PLAN.md  DEPRECATED_CODE.md  DEPRECATION_ANALYSIS.md  DEPRECATION_VERIFICATION_REPORT.md  DOCKER_LOGGING.md  DOCS_STATUS.md  (+28 more)
docs-new/: MIGRATION_EXECUTION_LOG.md  README.md
(+809 files in other folders)
